k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruttoptimering
  namespace: ruttoptimering

spec:
  ports:
    - port: 80
  type: ClusterIP
  selector:
    app: ruttoptimering
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruttoptimering
  namespace: ruttoptimering
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruttoptimering
  template:
    metadata:
      labels:
        app: ruttoptimering
    spec:
      containers:
        - name: ruttoptimering
          image: ghcr.io/iteam1337/ruttoptimering:0.67.11 # {"$imagepolicy": "flux-system:ruttoptimering"}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
